MDEV-23807 ut_a(n_pending_flushes) failed in fil_node_t::prepare_to_close_or_detach()

fil_close_all_files(): Wait until there are no pending os_file_flush().